--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Let's learn github</h1>
-    
-</body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+      reiciendis est ea explicabo nostrum, temporibus incidunt, repellendus
+      fugit aspernatur asperiores rerum praesentium iure dolorum illum sequi.
+      Expedita saepe nemo eaque!
+    </p>
+  </body>
 </html>
