--- a/index.html
+++ b/index.html
@@ -7,20 +7,91 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Let's learn github</h1>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
-      reiciendis est ea explicabo nostrum, temporibus incidunt, repellendus
-      fugit aspernatur asperiores rerum praesentium iure dolorum illum sequi.
-      Expedita saepe nemo eaque!
-    </p>
 
-    <div>
-        <div>div1</div>
-        <div>div2</div>
-        <div>div3</div>
-        <div>div4</div>
-        <div>div5</div>
+          <!-- ******** Navigation section *********** -->
+
+      <section>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </section>
+
+
+      
+
+        <!-- ************ Hero Section ************* -->
+      <section class="container">
+
+        <div class="bg-primary fs-1 display-1 text-warning p-5 m-5">
+          <h1 class="">Let's learn github</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+            reiciendis est ea explicabo nostrum, temporibus incidunt, repellendus
+            fugit aspernatur asperiores rerum praesentium iure dolorum illum sequi.
+            Expedita saepe nemo eaque!
+          </p>
+
+        </div>
+      </section>
+
+        <!--************* section 02 **************-->
+
+
+      <section class="container pt-5">
+        <div class="d-flex gap-5">
+          <div class="flex-bs">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, illo ducimus neque distinctio optio iure impedit. Quidem nostrum quam, dolore unde repellendus ipsum quos quasi, cumque officia, reiciendis esse aspernatur?</p>
+          </div>
+          <div>
+            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus laborum molestias at inventore illo quaerat dolore blanditiis, minus exercitationem vitae quos aperiam. Est, tempore eum.</p>
+          </div>
+          <div>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut, facilis quis. Accusamus eveniet ut accusantium aut doloribus repellendus et perspiciatis.</p>
+  
+          </div>
+
+
+      </section>
+
+
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
