--- a/index.html
+++ b/index.html
@@ -55,17 +55,25 @@
 
         <!-- ************ Hero Section ************* -->
       <section class="container">
+        <div class="row"> 
+                <div class="col-sm-4 bg-primary fs-1 display-1 text-warning p-5 m-5">
+                <h1 class="">Let's learn github</h1>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
+                  reiciendis est ea explicabo nostrum, temporibus incidunt, repellendus
+                  fugit aspernatur asperiores rerum praesentium iure dolorum illum sequi.
+                  Expedita saepe nemo eaque!
+                </p>
+      
+               </div>
 
-        <div class="bg-primary fs-1 display-1 text-warning p-5 m-5">
-          <h1 class="">Let's learn github</h1>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
-            reiciendis est ea explicabo nostrum, temporibus incidunt, repellendus
-            fugit aspernatur asperiores rerum praesentium iure dolorum illum sequi.
-            Expedita saepe nemo eaque!
-          </p>
-
+              <div class="col-sm-8 bg-success"> 
+                <h2>Kamrul Hasan is a developer</h2>
+              </div>
+        
         </div>
+
+
       </section>
 
         <!--************* section 02 **************-->
