--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- ************ Hero Section ************* -->
       <section class="container">
         <div class="row"> 
-                <div class="col-sm-4 bg-primary fs-1 display-1 text-warning p-5 m-5">
+                <div class="col-md-4 bg-primary text-warning p-5 m-5">
                 <h1 class="">Let's learn github</h1>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
@@ -67,8 +67,9 @@
       
                </div>
 
-              <div class="col-sm-8 bg-success"> 
+              <div class="col-md-8 bg-success"> 
                 <h2>Kamrul Hasan is a developer</h2>
+                <p> lorem10 Bangladesh vs india macth watching</p>
               </div>
         
         </div>
