--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
+            <!-- navbar -->
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -77,7 +78,7 @@
 
       </section>
 
-        <!--************* section 02 **************-->
+        <!--************* section 02 3 Column **************-->
 
 
       <section class="container pt-5">
@@ -101,7 +102,41 @@
 
 
 
-    </div>
+
+        </div>
+
+        <!-- Card Section -->
+      <section class="container bg-info-subtle px-5 pt-2 mx-5">
+        <div class="container mt-3 d-flex gap-3 justify-content-center align-items-center space-around-evenly">
+          <div class="col-6">
+            <h2>Card Image</h2>
+            <p>Image at the top (card-img-top):</p>
+            <div class="card" style="width:400px">
+              <img class="card-img-top" src="https://www.w3schools.com/bootstrap4/img_avatar1.png" alt="Card image" style="width:100%">
+              <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
+            </div>
+  
+          </div>
+          <div class="col-6">
+            <p>Image at the bottom (card-img-bottom):</p>
+            <div class="card" style="width:400px">
+              <div class="card-body">
+                <h4 class="card-title">Jane Doe</h4>
+                <p class="card-text">Some example text some example text. Jane Doe is an architect and engineer</p>
+                <a href="#" class="btn btn-primary">See Profile</a>
+              </div>
+              <img class="card-img-bottom" src="https://www.w3schools.com/bootstrap4/img_avatar6.png" alt="Card image" style="width:100%">
+            </div>
+  
+          </div>
+
+        </div>
+
+      </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
   </body>
