Update contact_form.html at home

--- a/contact_form.html
+++ b/contact_form.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Contact Form</h1>
+    <h2>Please input your data here</h2>
+    <form>
+        <input type="text" placeholder="Write Name"><br>
+        
+    </form>
     
 </body>
 </html>
