change not important

--- a/contact_form.html
+++ b/contact_form.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Contact Form</h1>
     <h2>Please input your data here</h2>
     <form>
-        <input type="text" placeholder="Write Name"><br>
-        
+      <input type="text" placeholder="Write Name" /><br />
+      <input type="text" placeholder="Write Name" /><br />
+      <input type="text" placeholder="Write Name" /><br />
+      <input type="text" placeholder="Write Name" /><br />
+      <input type="text" placeholder="Write Name" /><br />
     </form>
-    
-</body>
+  </body>
 </html>
