--- a/contact_form.html
+++ b/contact_form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/form.css" />
     <title>Contact</title>
   </head>
   <body>
@@ -15,5 +16,54 @@
       <input type="text" placeholder="Write Name" /><br />
       <input type="text" placeholder="Write Name" /><br />
     </form>
+    <!-- Contact Form Section -->
+    <section>
+      <div>
+        <div class="contact-design">
+          <h1>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, itaque.
+          </h1>
+        </div>
+        <div class="contact-design">
+          <form
+            action="/action_page.php"
+            style="max-width: 500px; margin: auto"
+          >
+            <h2>Register Form</h2>
+            <div class="input-container">
+              <i class="fa fa-user icon"></i>
+              <input
+                class="input-field"
+                type="text"
+                placeholder="Username"
+                name="usrnm"
+              />
+            </div>
+
+            <div class="input-container">
+              <i class="fa fa-envelope icon"></i>
+              <input
+                class="input-field"
+                type="text"
+                placeholder="Email"
+                name="email"
+              />
+            </div>
+
+            <div class="input-container">
+              <i class="fa fa-key icon"></i>
+              <input
+                class="input-field"
+                type="password"
+                placeholder="Password"
+                name="psw"
+              />
+            </div>
+
+            <button type="submit" class="btn">Register</button>
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
