--- a/about.html
+++ b/about.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/form.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-    <title>Contact</title>
-  </head>
-  <body>
-              <!-- ******** Navigation section *********** -->
+    <title>About Section</title>
+</head>
+<body>
+          <!-- ******** Navigation section *********** -->
 
       <section>
 
@@ -54,65 +53,6 @@
           </div>
         </nav>
       </section>
-
-    <!-- Contact Form Section -->
-    <h1>Contact Form</h1>
-    <h2>Please input your data here</h2>
-    <form>
-      <input type="text" placeholder="Write Name" /><br />
-      <input type="text" placeholder="Write Name" /><br />
-      <input type="text" placeholder="Write Name" /><br />
-      <input type="text" placeholder="Write Name" /><br />
-      <input type="text" placeholder="Write Name" /><br />
-    </form>
-    <!-- Contact Form Section -->
-    <section>
-      <div>
-        <div class="contact-design">
-          <h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, itaque.
-          </h1>
-        </div>
-        <div class="contact-design">
-          <form
-            action="/action_page.php"
-            style="max-width: 500px; margin: auto"
-          >
-            <h2>Register Form</h2>
-            <div class="input-container">
-              <i class="fa fa-user icon"></i>
-              <input
-                class="input-field"
-                type="text"
-                placeholder="Username"
-                name="usrnm"
-              />
-            </div>
-
-            <div class="input-container">
-              <i class="fa fa-envelope icon"></i>
-              <input
-                class="input-field"
-                type="text"
-                placeholder="Email"
-                name="email"
-              />
-            </div>
-
-            <div class="input-container">
-              <i class="fa fa-key icon"></i>
-              <input
-                class="input-field"
-                type="password"
-                placeholder="Password"
-                name="psw"
-              />
-            </div>
-
-            <button type="submit" class="btn">Register</button>
-          </form>
-        </div>
-      </div>
-    </section>
-  </body>
+    
+</body>
 </html>
