--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="./about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact_form.html">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,6 +59,7 @@
 
         <!-- ************ Hero Section ************* -->
       <section class="container">
+        <h2>This is section number 02</h2>
         <div class="row"> 
                 <div class="col-md-4 bg-primary text-warning p-5 m-5">
                 <h1 class="">Let's learn github</h1>
@@ -81,7 +85,8 @@
         <!--************* section 02 3 Column **************-->
 
 
-      <section class="container pt-5">
+      <section class="container pt-5 border-rounded-3 bg-secondary-subtle border-success-subtle px-5 mx-5">
+        <h2 class="text-primary text-center border border-5 border-warning">This is section number 03</h2>
         <div class="d-flex gap-5">
           <div class="flex-bs">
             <h2>Lorem ipsum dolor sit amet.</h2>
