--- a/about.html
+++ b/about.html
@@ -53,6 +53,11 @@
           </div>
         </nav>
       </section>
+
+      <section>
+        <h2>This is about page secton</h2>
+        <p>Let us decorate this page</p>
+      </section>
     
 </body>
 </html>
