--- a/contact_form.html
+++ b/contact_form.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <!-- navbar -->
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="index.html">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -60,7 +60,7 @@
     <h2>Please input your data here</h2>
     <form>
       <input type="text" placeholder="Write Name" /><br />
-      <input type="text" placeholder="Write Name" /><br />
+      <input type="text" placeholder="Write email" /><br />
       <input type="text" placeholder="Write Name" /><br />
       <input type="text" placeholder="Write Name" /><br />
       <input type="text" placeholder="Write Name" /><br />
