--- a/about.html
+++ b/about.html
@@ -54,6 +54,23 @@
         </nav>
       </section>
 
+      <!-- About Section -->
+       <section>
+        <h1>About Section</h1>
+        <h2>This is about page</h2>
+        <p>Let us decorate this page</p>
+        <h2>Top Management</h2>
+        <p>Let us decorate this page</p>
+        <h2>Our Team Members</h2>
+        <p>Let us decorate this page</p>
+        <h2>Our History</h2>
+        <p>Let us decorate this page</p>
+        <h2>Our Vision and Mission</h2>
+        <p>Let us decorate this page</p>
+
+        
+       </section>
+
       <section>
         <h2>This is about page secton</h2>
         <p>Let us decorate this page</p>
