--- a/about.html
+++ b/about.html
@@ -56,7 +56,14 @@
 
       <!-- About Section -->
        <section>
+
         <h1>About Section</h1>
+        <hr>
+        <br>  
+        <div>
+          <img src="assets/IMG_20220917_135636.jpg" alt="About Image" style="width:300px; height:auto;">
+          
+        </div>
         <h2>This is about page</h2>
         <p>Let us decorate this page</p>
         <h2>Top Management</h2>
@@ -75,6 +82,8 @@
         <h2>This is about page secton</h2>
         <p>Let us decorate this page</p>
       </section>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
 </html>
