--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
       </section>
 
       <!-- About Section -->
-       <section>
+       <section class="container mt-4 bg-primary-subtle p-4 rounded">
 
         <h1>About Section</h1>
         <hr>
@@ -64,21 +64,22 @@
           <img src="assets/IMG_20220917_135636.jpg" alt="About Image" style="width:300px; height:auto;">
           
         </div>
-        <h2>This is about page</h2>
-        <p>Let us decorate this page</p>
-        <h2>Top Management</h2>
-        <p>Let us decorate this page</p>
-        <h2>Our Team Members</h2>
-        <p>Let us decorate this page</p>
-        <h2>Our History</h2>
-        <p>Let us decorate this page</p>
-        <h2>Our Vision and Mission</h2>
-        <p>Let us decorate this page</p>
+        <h2 class="text-center mt-3">This is about page</h2>
+        <div class="container d-flex flex-row  align-items-center">
+        <div class="mb-3 mt-3 ">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="mb-3 mt-3 mx-5">
+          <img src="./assets/img_avatar6.png" alt="" srcset="">
+        </div>
+
+        </div>
+
 
         
        </section>
 
-      <section>
+      <section class="container mt-4 bg-warning-subtle p-4 rounded text-center">
         <h2>This is about page secton</h2>
         <p>Let us decorate this page</p>
       </section>
