--- a/card.html
+++ b/card.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1 class="text-center text-danger bg-secondary-subtle">
-      Card Design Template
+      Card Design Template 2
     </h1>
     <section>
       <div class="container d-flex m-5 p-5">
