--- a/about.html
+++ b/about.html
@@ -60,8 +60,15 @@
         <h1>About Section</h1>
         <hr>
         <br>  
-        <div>
-          <img src="assets/IMG_20220917_135636.jpg" alt="About Image" style="width:300px; height:auto;">
+        <div class="border border-success border-rounded border-5 m-3 p-5 d-flex" style="background-image: url('assets/IMG_20220917_135636.jpg'); opacity: 0.8; background-repeat: no-repeat;">
+          <div>
+          <img src="./assets/IMG_20220917_133432.jpg" alt="About Image" style="width:400px; height:auto;">
+
+          </div>
+          <div class="mx-5">
+            <p class="text-white fs-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat officia sed aliquid modi rerum debitis consectetur tempora enim esse distinctio?</p>
+          </div>
+          
           
         </div>
         <h2 class="text-center mt-3">This is about page</h2>
