--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <!-- ************ Hero Section ************* -->
       <section class="container-fluid bg-secondary-subtle p-5 text-center">
         <h2>Welcome to the world of Knowledge</h2>
-        <div class="row"> 
+        <div class="row justify-content-center align-items-center gap-5"> 
               <!-- col 1  -->
-                <div class="col-md-4 bg-success text-warning p-2 m-2">
+                <div class="col-md-4 bg-success text-white p-2 m-2">
                 <h1 class="">Let's learn github</h1>
                 <p>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium
@@ -74,6 +74,13 @@
                   fugit aspernatur asperiores rerum praesentium iure dolorum illum sequi.
                   Expedita saepe nemo eaque!
                 </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam architecto accusantium tenetur aliquid ipsa distinctio facilis, praesentium quo quaerat nulla.</p>
+                <button class="btn btn-secondary">Click Me</button>
+                <button class="btn btn-warning">Click Me</button>
+
+
+
+
                </div>
 
                        <!-- col 2  -->
